added testing with check function

--- a/staff/albert-fuente/array-functions/index.html
+++ b/staff/albert-fuente/array-functions/index.html
@@ -7,38 +7,38 @@
   <body>
     <h1>Callenge, reproducir todos los metodos </h1>
 
-<<<<<<< Updated upstream
-=======
     <script src="check.js"></script>
 
->>>>>>> Stashed changes
 
 
     <script src="push.js" charset="utf-8"></script>
     <script src="push.demo.js" charset="utf-8"></script>
-<<<<<<< Updated upstream
-=======
     <script src="push.test.js" charset="utf-8"></script>
 
->>>>>>> Stashed changes
 
     <script src="pop.js" charset="utf-8"></script>
     <script src="pop.demo.js" charset="utf-8"></script>
+    <script src="pop.test.js" charset="utf-8"></script>
 
-    <script src="arrayFrom.js" charset="utf-8"></script>
-    <script src="arrayFrom.demo.js" charset="utf-8"></script>
 
-    <script src="arrayIsArray.js" charset="utf-8"></script>
-    <script src="arrayIsArray.demo.js" charset="utf-8"></script>
 
-    <script src="arrayOf.js" charset="utf-8"></script>
-    <script src="arrayOf.demo.js" charset="utf-8"></script>
+    <script src="array-from.js" charset="utf-8"></script>
+    <script src="array-from.demo.js" charset="utf-8"></script>
+    <script src="array-from-test.js" charset="utf-8"></script>
+
+
+    <script src="array-is-array.js" charset="utf-8"></script>
+    <script src="array-is-array.demo.js" charset="utf-8"></script>
+
+
+    <script src="array-of.js" charset="utf-8"></script>
+    <script src="array-of.demo.js" charset="utf-8"></script>
 
     <script src="concat.js" charset="utf-8"></script>
     <script src="concat.demo.js" charset="utf-8"></script>
 
-    <script src="copyWithin.js" charset="utf-8"></script>
-    <script src="copyWithin.demo.js" charset="utf-8"></script>
+    <script src="copy-within.js" charset="utf-8"></script>
+    <script src="copy-within.demo.js" charset="utf-8"></script>
 
     <script src="entries.js" charset="utf-8"></script>
     <script src="entries.demo.js" charset="utf-8"></script>
@@ -55,8 +55,8 @@
     <script src="find.js" charset="utf-8"></script>
     <script src="find.demo.js" charset="utf-8"></script>
 
-    <script src="findIndex.js" charset="utf-8"></script>
-    <script src="findIndex.demo.js" charset="utf-8"></script>
+    <script src="find-index.js" charset="utf-8"></script>
+    <script src="find-index.demo.js" charset="utf-8"></script>
 
     <script src="flat.js" charset="utf-8"></script>
     <script src="flat.demo.js" charset="utf-8"></script>
@@ -100,8 +100,6 @@
     <script src="unShift.js" charset="utf-8"></script>
     <script src="unShift.demo.js" charset="utf-8"></script>
 
-<<<<<<< Updated upstream
-=======
     <script src="some.js" charset="utf-8"></script>
     <script src="some.demo.js" charset="utf-8"></script>
 
@@ -117,7 +115,6 @@
     <script src="reduce-right.js" charset="utf-8"></script>
     <script src="reduce-right.demo.js" charset="utf-8"></script>
 
->>>>>>> Stashed changes
 
   </body>
 </html>
