--- a/staff/jose-ortuno/array-functions/index.html
+++ b/staff/jose-ortuno/array-functions/index.html
@@ -4,20 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Array Functions</title>
 </head>
 <body>
-    <script src="concat.js"></script>
-    <script src="concat.demo.js"></script>
-    <script src="copyWithin.js"></script>
-    <script src="copyWithin.demo.js"></script>
+    <script src="check.js"></script>
+    <!-- <script src="concat.js"></script>
+    <script src="concat.test.js"></script>
+    <script src="concat.demo.js"></script> -->
+    <!-- <script src="copyWithin.js"></script>
+    <script src="copyWithin.test.js"></script> -->
+    <!-- <script src="copyWithin.demo.js"></script> -->
     <script src="entries.js"></script>
+    <script src="entries.test.js"></script>
     <script src="entries.demo.js"></script>
-    <script src="every.js"></script>
-    <script src="every.demo.js"></script>
-    <script src="fill.js"></script>
-    <script src="fill.demo.js"></script>
-    <script src="reduce.js"></script>
-    <script src="reduce.demo.js"></script>
 </body>
 </html>
