--- a/staff/carolina-zhou/array-functions/index.html
+++ b/staff/carolina-zhou/array-functions/index.html
@@ -18,28 +18,28 @@
     <script src="copy-within.test.js"></script>
 
     <script src="entries.js"></script>
-    <script src="entries.demo.js"></script>
+    <!-- <script src="entries.demo.js"></script> -->
     <!-- REVISAR --><script src="entries.test.js"></script>
 
     <script src="every.js"></script>
-    <script src="every.demo.js"></script>
-    <script src="every.test.js"></script>
+    <!-- <script src="every.demo.js"></script> -->
+    <!-- REVISAR --><script src="every.test.js"></script>
 
     <script src="fill.js"></script>
-    <script src="fill.demo.js"></script>
-    <script src="fill.test.js"></script>
+    <!-- <script src="fill.demo.js"></script> -->
+    <!-- REVISAR --><script src="fill.test.js"></script>
 
     <script src="filter.js"></script>
-    <script src="filter.demo.js"></script>
-    <script src="filter.test.js"></script>
+    <!-- <script src="filter.demo.js"></script> -->
+    <!-- REVISAR --><script src="filter.test.js"></script>
     
     <script src="find.js"></script>
-    <script src="find.demo.js"></script>
-    <script src="find.test.js"></script>
+    <!-- <script src="find.demo.js"></script> -->
+    <!-- REVISAR --><script src="find.test.js"></script>
 
     <script src="find-index.js"></script>
-    <script src="find-index.demo.js"></script>
-    <script src="find-index.test.js"></script>
+    <!-- <script src="find-index.demo.js"></script> -->
+    <!-- REVISAR --><script src="find-index.test.js"></script>
 
     <!-- Revisar
     <script src="flat.js"></script>
@@ -57,8 +57,8 @@
     <script src="from.test.js"></script>
 
     <script src="includes.js"></script>
-    <script src="includes.demo.js"></script>
-    <script src="includes.test.js"></script>
+    <!-- <script src="includes.demo.js"></script> -->
+    <!-- REVISAR --><script src="includes.test.js"></script>
 
     <script src="index-of.js"></script>
     <!-- <script src="index-of.demo.js"></script> -->
@@ -110,7 +110,7 @@
 
     <script src="some.js"></script>
     <!-- <script src="some.demo.js"></script> -->
-    <script src="some.test.js"></script>
+    <!-- REVISAR --><script src="some.test.js"></script>
 
     <script src="to-string.js"></script>
     <!-- <script src="to-string.demo.js"></script> -->
