mucho layout final

--- a/staff/manuel-galvez/mucho-layout/all/index.html
+++ b/staff/manuel-galvez/mucho-layout/all/index.html
@@ -51,10 +51,12 @@
                         </ul>
                         <ul class="menu__bottom">
                             <li class="menu__item">
-                                <a href="#">All Services<i class="fas fa-chevron-down fa-xs"></i></a>
+                                <a href="#">All Service</a>
+                                <i class="fas fa-chevron-down fa-xs"></i>
                             </li>
                             <li class="menu__item">
-                                <a href="#">All Industries<i class="fas fa-chevron-down fa-xs"></i></a>
+                                <a href="#">All Industries</a>
+                                <span><i class="fas fa-chevron-down fa-xs"></i></span>
                             </li>
                         </ul>
                    </div>
@@ -154,7 +156,7 @@
                 </article>
             </main>
             <footer>
-                <section class="location">
+                <section class="footer__item location">
                     <address class="location__item">
                         <div class="card card--light-text">
                             <div class="card__title card__title--extra-margin">
@@ -216,10 +218,6 @@
                         </div>
                     </address>
                 </section>
-                <section class="social">
-
-                </section>
-                   
             </footer>
         </div>
         <script src="https://kit.fontawesome.com/0ebe3f9bf2.js"></script>
