--- a/staff/jorge-rodri/array-functions/index.html
+++ b/staff/jorge-rodri/array-functions/index.html
@@ -7,8 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    
-    <script src="test/test-concat.js"></script>
-    <script src="demo/d-concat.js"></script>
+    <script src="demo/d-copy-whit-in.js"></script>
+    <script src="test/test-copyWhitin.js"></script>
+<!--     <script src="demo/d-concat.js"></script>
+    <script src="test/test-concat.js"></script> -->
 </body>
 </html>
