--- a/staff/manuel-galvez/array-functions/test.html
+++ b/staff/manuel-galvez/array-functions/test.html
@@ -10,5 +10,9 @@
     <script src="check.js"></script>
     <script src="reduce.js"></script>
     <script src="reduce.test.js"></script>
+    <script src="reduceRight.js"></script>
+    <script src="reduceRight.test.js"></script>
+    <script src="lastIndexOf.js"></script>
+    <script src="lastIndexOf.test.js"></script>
 </body>
 </html>
