--- a/staff/adria-arquimbau/js/array-functions/index.html
+++ b/staff/adria-arquimbau/js/array-functions/index.html
@@ -9,8 +9,12 @@
 <body>
     <script src="check.js"></script>
 
-    <script src="push.js"></script>
-    <script src="push.test.js"></script>
+    <script src="map.js"></script>
+    <script src="map.test.js"></script>
+
+    <!-- <script src="push.js"></script>
+    <script src="push.test.js"></script> -->
+
     <!-- <script src="isArray.js"></script>
     <script src="is-array-test.js"></script>
 
