--- a/staff/christian-haag/array-functions/index.html
+++ b/staff/christian-haag/array-functions/index.html
@@ -9,12 +9,22 @@
   <body>
     <script src="check.js"></script>
 
+    <!-- <script src="push.js"></script>
+    <script src="push.demo.js"></script>
+    <script src="push.test.js"></script> -->
+
+    <!-- <script src="pop.js"></script> -->
+    <!-- <script src="pop.demo.js"></script> -->
+
+    <!-- <script src="for-each.js"></script>
+    <script src="for-each.demo.js"></script>
+    <script src="for-each.test.js"></script> -->
+
+    <script src="flat.js"></script>
+    <script src="flat.test.js"></script>
+
     <!-- <script src="map.js"></script>
     <script src="map.demo.js"></script>
     <script src="map.test.js"></script> -->
-
-    <script src="forEach.js"></script>
-    <script src="forEach.demo.js"></script>
-    <script src="foreach.test.js"></script>
   </body>
 </html>
