--- a/staff/adria-arquimbau/js/array-functions/index.html
+++ b/staff/adria-arquimbau/js/array-functions/index.html
@@ -12,17 +12,14 @@
     <script src="map.js"></script>
     <script src="map.test.js"></script>
 
-    <!-- <script src="push.js"></script>
-    <script src="push.test.js"></script> -->
+    <script src="for-each.js"></script>
+    <script src="for-each.test.js"></script>
 
-    <!-- <script src="isArray.js"></script>
-    <script src="is-array-test.js"></script>
-
-    <script class="forEach.js"></script>
-    <script class="for-each.test.js"></script>
-    
     <script src="pop.js"></script>
-    <script src="pop.test.js"></script> -->
+    <script src="pop.test.js"></script>
+
+    <script src="flat.js"></script>
+    <script src="flat.test.js"></script>
 
 </body>
 </html>
