update array functions

--- a/staff/manuel-barzi/array-functions/1/index.html
+++ b/staff/manuel-barzi/array-functions/1/index.html
@@ -23,5 +23,8 @@
     <script src="map.js"></script>
     <!-- <script src="map.demo.js"></script> -->
     <script src="map.test.js"></script>
+
+    <script src="flat.js"></script>
+    <script src="flat.test.js"></script>
 </body>
 </html>
