added more checks

--- a/staff/albert-fuente/array-functions/index.html
+++ b/staff/albert-fuente/array-functions/index.html
@@ -9,7 +9,7 @@
 
     <script src="check.js"></script>
 
-
+<!-- 
 
     <script src="push.js" charset="utf-8"></script>
     <script src="push.demo.js" charset="utf-8"></script>
@@ -56,11 +56,11 @@
     <script src="find.demo.js" charset="utf-8"></script>
 
     <script src="find-index.js" charset="utf-8"></script>
-    <script src="find-index.demo.js" charset="utf-8"></script>
+    <script src="find-index.demo.js" charset="utf-8"></script> -->
 
     <script src="flat.js" charset="utf-8"></script>
     <script src="flat.demo.js" charset="utf-8"></script>
-
+<!-- 
     <script src="flatMap.js" charset="utf-8"></script>
     <script src="flatMap.demo.js" charset="utf-8"></script>
 
@@ -70,8 +70,8 @@
     <script src="map.js" charset="utf-8"></script>
     <script src="map.demo.js" charset="utf-8"></script>
 
-    <script src="lastIndexOf.js" charset="utf-8"></script>
-    <script src="lastIndexOf.demo.js" charset="utf-8"></script>
+    <script src="last-index-of.js" charset="utf-8"></script>
+    <script src="last-index-of.demo.js" charset="utf-8"></script>
 
     <script src="keys.js" charset="utf-8"></script>
     <script src="keys.demo.js" charset="utf-8"></script>
@@ -79,8 +79,8 @@
     <script src="join.js" charset="utf-8"></script>
     <script src="join.demo.js" charset="utf-8"></script>
 
-    <script src="indexOf.js" charset="utf-8"></script>
-    <script src="indexOf.demo.js" charset="utf-8"></script>
+    <script src="index-of.js" charset="utf-8"></script>
+    <script src="index-of.demo.js" charset="utf-8"></script>
 
     <script src="reverse.js" charset="utf-8"></script>
     <script src="reverse.demo.js" charset="utf-8"></script>
@@ -94,11 +94,11 @@
     <script src="sort.js" charset="utf-8"></script>
     <script src="sort.demo.js" charset="utf-8"></script>
 
-    <script src="toString.js" charset="utf-8"></script>
-    <script src="toString.demo.js" charset="utf-8"></script>
+    <script src="to-string.js" charset="utf-8"></script>
+    <script src="to-string.demo.js" charset="utf-8"></script>
 
-    <script src="unShift.js" charset="utf-8"></script>
-    <script src="unShift.demo.js" charset="utf-8"></script>
+    <script src="un-shift.js" charset="utf-8"></script>
+    <script src="un-shift.demo.js" charset="utf-8"></script>
 
     <script src="some.js" charset="utf-8"></script>
     <script src="some.demo.js" charset="utf-8"></script>
@@ -115,6 +115,6 @@
     <script src="reduce-right.js" charset="utf-8"></script>
     <script src="reduce-right.demo.js" charset="utf-8"></script>
 
-
+ -->
   </body>
 </html>
