array functions testing iteration

--- a/staff/juan-bovo/array-functions/index.html
+++ b/staff/juan-bovo/array-functions/index.html
@@ -20,5 +20,8 @@
     <script src="fill-function.js"></script>
     <script src="fill-function.test.js"></script>
     <!-- <script src="fill-function.demo.js"></script> -->
+
+    <!-- <script src="flatmap-juampi.test.js"></script>
+    <script src="flatmap-juampi.js"></script> -->
 </body>
 </html>
