--- a/staff/jose-ortuno/array-functions/index.html
+++ b/staff/jose-ortuno/array-functions/index.html
@@ -9,13 +9,15 @@
 <body>
     <script src="check.js"></script>
     <!-- <script src="concat.js"></script>
-    <script src="concat.test.js"></script>
-    <script src="concat.demo.js"></script> -->
+    <script src="concat.test.js"></script> -->
+    <!-- <script src="concat.demo.js"></script> -->
     <!-- <script src="copyWithin.js"></script>
     <script src="copyWithin.test.js"></script> -->
     <!-- <script src="copyWithin.demo.js"></script> -->
-    <script src="entries.js"></script>
-    <script src="entries.test.js"></script>
-    <script src="entries.demo.js"></script>
+    <!-- <script src="entries.js"></script>
+    <script src="entries.test.js"></script> -->
+    <!-- <script src="entries.demo.js"></script> -->
+    <script src="flat.js"></script>
+    <script src="flat.test.js"></script>
 </body>
 </html>
