--- a/staff/albert-fuente/array-functions/index.html
+++ b/staff/albert-fuente/array-functions/index.html
@@ -9,7 +9,7 @@
 
     <script src="check.js"></script>
 
-<!-- 
+
 
     <script src="push.js" charset="utf-8"></script>
     <script src="push.demo.js" charset="utf-8"></script>
@@ -56,11 +56,11 @@
     <script src="find.demo.js" charset="utf-8"></script>
 
     <script src="find-index.js" charset="utf-8"></script>
-    <script src="find-index.demo.js" charset="utf-8"></script> -->
+    <script src="find-index.demo.js" charset="utf-8"></script>
 
     <script src="flat.js" charset="utf-8"></script>
     <script src="flat.demo.js" charset="utf-8"></script>
-<!-- 
+
     <script src="flatMap.js" charset="utf-8"></script>
     <script src="flatMap.demo.js" charset="utf-8"></script>
 
@@ -70,7 +70,7 @@
     <script src="map.js" charset="utf-8"></script>
     <script src="map.demo.js" charset="utf-8"></script>
 
-    <script src="last-index-of.js" charset="utf-8"></script>
+<!--     <script src="last-index-of.js" charset="utf-8"></script>
     <script src="last-index-of.demo.js" charset="utf-8"></script>
 
     <script src="keys.js" charset="utf-8"></script>
@@ -113,8 +113,8 @@
     <script src="includes.demo.js" charset="utf-8"></script>
 
     <script src="reduce-right.js" charset="utf-8"></script>
-    <script src="reduce-right.demo.js" charset="utf-8"></script>
+    <script src="reduce-right.demo.js" charset="utf-8"></script> -->
 
- -->
+
   </body>
 </html>
