--- a/staff/lluis-agusti/array-functions/index.html
+++ b/staff/lluis-agusti/array-functions/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <script src="check.js" ></script>
-    <script src="flatmanu.js"></script>
-    <script src="flatmanu.test.js"></script>
+    <script src="flat.js"></script>
+    <script src="flat.test.js"></script>
 
 </body>
 </html>
