--- a/staff/manuel-galvez/array-functions/index.html
+++ b/staff/manuel-galvez/array-functions/index.html
@@ -4,52 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Array functions</title>
+    <title>Document</title>
 </head>
 <body>
-    <script src="check.js"></script>
-    <script src="concat.js"></script>
-    <script src="concat.demo.js"></script>
-    <script src="copyWithin.js"></script>
-    <script src="copyWithin.demo.js"></script>
-    <script src="entries.js"></script>
-    <script src="entries.demo.js"></script>
-    <script src="every.js"></script>
-    <script src="every.demo.js"></script>
-    <script src="fill.js"></script>
-    <script src="fill.demo.js"></script>
-    <script src="filter.js"></script>
-    <script src="filter.demo.js"></script>
-    <script src="flatMap.js"></script>
-    <script src="flatMap.demo.js"></script>
-    <script src="forEach.js"></script>
-    <script src="forEach.demo.js"></script>
-    <script src="from.js"></script>
-    <script src="from.demo.js"></script>
-    <script src="includes.js"></script>
-    <script src="includes.demo.js"></script>
-    <script src="indexof.js"></script>
-    <script src="indexof.demo.js"></script>
-    <script src="join.js"></script>
-    <script src="join.demo.js"></script>
-    <script src="keys.js"></script>
-    <script src="keys.demo.js"></script>
-    <script src="lastIndexOf.js"></script>
-    <script src="lastIndexOf.demo.js"></script>
-    <script src="lastIndexOf.test.js"></script>
+    <script src="test-a-rude.js"></script>
+
+    <!-- <script src="push.js"></script> -->
+    <!-- <script src="push.demo.js"></script> -->
+    <!-- <script src="push.test.js"></script> -->
+
+    <!-- <script src="pop.js"></script> -->
+    <!-- <script src="pop.demo.js"></script> -->
+
+    <script src="for-each.js"></script>
+    <!-- <script src="for-each.demo.js"></script> -->
+    <script src="for-each.test.js"></script>
+
     <script src="map.js"></script>
-    <script src="map.demo.js"></script>
-    <script src="reduce.js"></script>
-    <script src="reduce.demo.js"></script>
-    <script src="reduce.test.js"></script>
-    <script src="reduceRight.js"></script>
-    <script src="reduceRight.demo.js"></script>
-    <script src="reduceRight.test.js"></script>
-    <script src="reverse.js"></script>
-    <script src="reverse.demo.js"></script>
-    <script src="shift.js"></script>
-    <script src="shift.demo.js"></script>
-    <script src="slice.js"></script>
-    <script src="slice.demo.js"></script>
+    <!-- <script src="map.demo.js"></script> -->
+    <script src="map.test.js"></script>
+
+    <script src="flat.js"></script>
+    <script src="flat.test.js"></script>
 </body>
 </html>
