add icons directory and modify icons src path in index.html

--- a/staff/jaume-villarreal/mucho-layout/mobile-first/index.html
+++ b/staff/jaume-villarreal/mucho-layout/mobile-first/index.html
@@ -251,11 +251,11 @@
             <div class="info-block info-social">
                 <p class="info-block__title">Subscribe</p>
                  <div class="icon-set">
-                    <a href="#"><img src="../img/icon/instagram.svg" alt="Instagram"></a>
-                    <a href="#"> <img src="../img/icon/facebook.svg" alt="Facebook"></a>
-                    <a href="#"> <img src="../img/icon/linkedin.svg" alt="Linkedin"></a>
-                    <a href="#"> <img src="../img/icon/behance.svg" alt="Behance"></a>
-                    <a href="#"> <img src="../img/icon/twitter.svg" alt="Twitter"></a>
+                    <a href="#"><img src="../img/icons/instagram.svg" alt="Instagram"></a>
+                    <a href="#"> <img src="../img/icons/facebook.svg" alt="Facebook"></a>
+                    <a href="#"> <img src="../img/icons/linkedin.svg" alt="Linkedin"></a>
+                    <a href="#"> <img src="../img/icons/behance.svg" alt="Behance"></a>
+                    <a href="#"> <img src="../img/icons/twitter.svg" alt="Twitter"></a>
                 </div> 
             </div>
         </div>
