update files and testing function

--- a/staff/carolina-zhou/array-functions/index.html
+++ b/staff/carolina-zhou/array-functions/index.html
@@ -41,10 +41,11 @@
     <!-- <script src="find-index.demo.js"></script> -->
     <!-- REVISAR --><script src="find-index.test.js"></script>
 
-    <!-- Revisar
     <script src="flat.js"></script>
-    <script src="flat.demo.js"></script> 
+    <!-- <script src="flat.demo.js"></script> --> 
+    <script src="flat.test.js"></script> 
 
+<!-- Revisar
     <script src="flatMap.js"></script>
     <script src="flatMap.demo.js"></script>-->
 
@@ -58,7 +59,7 @@
 
     <script src="includes.js"></script>
     <!-- <script src="includes.demo.js"></script> -->
-    <!-- REVISAR --><script src="includes.test.js"></script>
+    <script src="includes.test.js"></script>
 
     <script src="index-of.js"></script>
     <!-- <script src="index-of.demo.js"></script> -->
