--- a/staff/adria-arquimbau/js/array-functions/index.html
+++ b/staff/adria-arquimbau/js/array-functions/index.html
@@ -7,19 +7,20 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="check.js"></script>
 
-    <script src="map.js"></script>
-    <script src="map.test.js"></script>
+    <script src="test-a-rude.js"></script>
 
     <script src="for-each.js"></script>
     <script src="for-each.test.js"></script>
 
-    <script src="pop.js"></script>
-    <script src="pop.test.js"></script>
+    <script src="map.js"></script>
+    <script src="map.test.js"></script>
 
     <script src="flat.js"></script>
     <script src="flat.test.js"></script>
+
+    <script src="pop.js"></script> <!-- falta per fer -->
+    <script src="pop.test.js"></script>
 
 </body>
 </html>
