--- a/staff/manuel-galvez/array-functions/index.html
+++ b/staff/manuel-galvez/array-functions/index.html
@@ -9,22 +9,8 @@
 <body>
     <script src="test-a-rude.js"></script>
 
-    <!-- <script src="push.js"></script> -->
-    <!-- <script src="push.demo.js"></script> -->
-    <!-- <script src="push.test.js"></script> -->
-
-    <!-- <script src="pop.js"></script> -->
-    <!-- <script src="pop.demo.js"></script> -->
-
-    <script src="for-each.js"></script>
-    <!-- <script src="for-each.demo.js"></script> -->
-    <script src="for-each.test.js"></script>
-
-    <script src="map.js"></script>
-    <!-- <script src="map.demo.js"></script> -->
-    <script src="map.test.js"></script>
-
-    <script src="flat.js"></script>
-    <script src="flat.test.js"></script>
+    <script src="reduce.js"></script>
+    <script src="reduce.test.js"></script>
+    
 </body>
 </html>
