--- a/staff/carolina-zhou/array-functions/index.html
+++ b/staff/carolina-zhou/array-functions/index.html
@@ -7,95 +7,97 @@
     <title>Array Methods</title>
 </head>
 <body>
-    <script src="check.js"></script>
-
-    <script src="concat.js"></script>
+    <script src="test-a-rude.js"></script>
+    
+    <!-- <script src="concat.js"></script> -->
     <!-- <script src="concat.demo.js"></script> -->
-    <script src="concat.test.js"></script>
+    <!-- <script src="concat.test.js"></script> -->
 
-    <script src="copy-within.js"></script>
+    <!-- <script src="copy-within.js"></script> -->
     <!-- <script src="copy-within.demo.js"></script> -->
-    <script src="copy-within.test.js"></script>
+    <!-- <script src="copy-within.test.js"></script> -->
 
-    <script src="entries.js"></script>
+    <!-- <script src="entries.js"></script> -->
     <!-- <script src="entries.demo.js"></script> -->
-    <!-- REVISAR --><script src="entries.test.js"></script>
+    <!-- <script src="entries.test.js"></script> -->
 
     <script src="every.js"></script>
     <!-- <script src="every.demo.js"></script> -->
-    <!-- REVISAR --><script src="every.test.js"></script>
+    <script src="every.test.js"></script>
 
-    <script src="fill.js"></script>
+    <!-- <script src="fill.js"></script> -->
     <!-- <script src="fill.demo.js"></script> -->
-    <!-- REVISAR --><script src="fill.test.js"></script>
+    <!-- <script src="fill.test.js"></script> -->
 
-    <script src="filter.js"></script>
+    <!-- <script src="filter.js"></script> -->
     <!-- <script src="filter.demo.js"></script> -->
-    <!-- REVISAR --><script src="filter.test.js"></script>
+    <!-- <script src="filter.test.js"></script> -->
     
-    <script src="find.js"></script>
+    <!-- <script src="find.js"></script> -->
     <!-- <script src="find.demo.js"></script> -->
-    <!-- REVISAR --><script src="find.test.js"></script>
+    <!-- <script src="find.test.js"></script> -->
 
-    <script src="find-index.js"></script>
+    <!-- <script src="find-index.js"></script> -->
     <!-- <script src="find-index.demo.js"></script> -->
-    <!-- REVISAR --><script src="find-index.test.js"></script>
+    <!-- <script src="find-index.test.js"></script> -->
 
     <script src="flat.js"></script>
     <!-- <script src="flat.demo.js"></script> --> 
     <script src="flat.test.js"></script> 
 
-<!-- Revisar
-    <script src="flatMap.js"></script>
-    <script src="flatMap.demo.js"></script>-->
+    <!-- <script src="flatMap.js"></script> -->
+    <!-- <script src="flatMap.demo.js"></script> -->
 
     <script src="for-each.js"></script>
     <!-- <script src="for-each.demo.js"></script> -->
     <script src="for-each.test.js"></script>
 
-    <script src="from.js"></script>
+    <!-- <script src="from.js"></script> -->
     <!-- <script src="from.demo.js"></script> -->
-    <script src="from.test.js"></script>
+    <!-- <script src="from.test.js"></script> -->
 
-    <script src="includes.js"></script>
+    <!-- <script src="includes.js"></script> -->
     <!-- <script src="includes.demo.js"></script> -->
-    <script src="includes.test.js"></script>
+    <!-- <script src="includes.test.js"></script> -->
 
-    <script src="index-of.js"></script>
+    <!-- <script src="index-of.js"></script> -->
     <!-- <script src="index-of.demo.js"></script> -->
-    <script src="index-of.test.js"></script>
+    <!-- <script src="index-of.test.js"></script> -->
 
-    <script src="join.js"></script>
+    <!-- <script src="is-array.js"></script> -->
+    <!-- <script src="is-array.test.js"></script> -->
+
+    <!-- <script src="join.js"></script> -->
     <!-- <script src="join.demo.js"></script> -->
-    <script src="join.test.js"></script>
+    <!-- <script src="join.test.js"></script> -->
 
-    <script src="keys.js"></script>
+    <!-- <script src="keys.js"></script> -->
     <!-- <script src="keys.demo.js"></script> -->
-    <script src="keys.test.js"></script>
+    <!-- <script src="keys.test.js"></script> -->
 
-    <script src="last-index-of.js"></script>
+    <!-- <script src="last-index-of.js"></script> -->
     <!-- <script src="last-index-of.demo.js"></script> -->
-    <script src="last-index-of.test.js"></script>
+    <!-- <script src="last-index-of.test.js"></script> -->
 
     <script src="map.js"></script>
     <!-- <script src="map.demo.js"></script> -->
     <script src="map.test.js"></script>
 
-    <script src="push.js"></script>
+    <!-- <script src="push.js"></script> -->
     <!-- <script src="push.demo.js"></script> -->
-    <script src="push.test.js"></script>
+    <!-- <script src="push.test.js"></script> -->
 
-    <script src="pop.js"></script>
+    <!-- <script src="pop.js"></script> -->
     <!-- <script src="pop.demo.js"></script> -->
-    <script src="pop.test.js"></script>
+    <!-- <script src="pop.test.js"></script> -->
 
-    <script src="reduce.js"></script>
+    <!-- <script src="reduce.js"></script> -->
     <!-- <script src="reduce.demo.js"></script> -->
-    <script src="reduce.test.js"></script>
+    <!-- <script src="reduce.test.js"></script> -->
 
-    <script src="reduce-right.js"></script>
+    <!-- <script src="reduce-right.js"></script> -->
     <!-- <script src="reduce-right.demo.js"></script> -->
-    <script src="reduce-right.test.js"></script>
+    <!-- <script src="reduce-right.test.js"></script> -->
 
     <script src="reverse.js"></script>
     <!-- <script src="reverse.demo.js"></script> -->
@@ -105,20 +107,26 @@
     <!-- <script src="shift.demo.js"></script> -->
     <script src="shift.test.js"></script>
 
-    <script src="slice.js"></script>
+    <!-- <script src="slice.js"></script> -->
     <!-- <script src="slice.demo.js"></script> -->
-    <script src="slice.test.js"></script>
+    <!-- <script src="slice.test.js"></script> -->
 
     <script src="some.js"></script>
     <!-- <script src="some.demo.js"></script> -->
-    <!-- REVISAR --><script src="some.test.js"></script>
+    <script src="some.test.js"></script>
 
-    <script src="to-string.js"></script>
+    <!-- <script src="sort.js"></script> -->
+    <!-- <script src="sort.test.js"></script> -->
+
+    <!-- <script src="splice.js"></script> -->
+    <!-- <script src="splice.test.js"></script> -->
+
+    <!-- <script src="to-string.js"></script> -->
     <!-- <script src="to-string.demo.js"></script> -->
-    <script src="to-string.test.js"></script>
+    <!-- <script src="to-string.test.js"></script> -->
 
-    <script src="unshift.js"></script>
+    <!-- <script src="unshift.js"></script> -->
     <!-- <script src="unshift.demo.js"></script> -->
-    <script src="unshift.test.js"></script>
+    <!-- <script src="unshift.test.js"></script> -->
 </body>
 </html>
