--- a/staff/adria-arquimbau/js/array-functions/index.html
+++ b/staff/adria-arquimbau/js/array-functions/index.html
@@ -19,8 +19,11 @@
     <script src="flat.js"></script>
     <script src="flat.test.js"></script>
 
-<!--     <script src="pop.js"></script>  falta per fer 
-    <script src="pop.test.js"></script>
- -->
+    <script src="copy-within.js"></script>
+    <script src="copy-within.test.js"></script>
+
+    
+
+
 </body>
 </html>
