--- a/staff/manuel-galvez/array-functions/index.html
+++ b/staff/manuel-galvez/array-functions/index.html
@@ -8,9 +8,13 @@
 </head>
 <body>
     <script src="test-a-rude.js"></script>
-
+    <script src="lastIndexOf.js"></script>
+    <script src="lastIndexOf.test.js"></script>
     <script src="reduce.js"></script>
     <script src="reduce.test.js"></script>
+    <script src="reduceRight.js"></script>
+    <script src="reduceRight.test.js"></script>
+
     
 </body>
 </html>
