--- a/staff/juan-bovo/array-functions/index.html
+++ b/staff/juan-bovo/array-functions/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="check.js"></script>
+    <script src="test-a-rude.js"></script>
 
     <script src="to-string.js"></script>
     <script src="to-string.test.js"></script>
@@ -21,7 +21,7 @@
     <script src="fill-function.test.js"></script>
     <!-- <script src="fill-function.demo.js"></script> -->
 
-    <!-- <script src="flatmap-juampi.test.js"></script>
-    <script src="flatmap-juampi.js"></script> -->
+    <script src="flat.js"></script>
+    <script src="flat.test.js"></script>
 </body>
 </html>
