convert to Emacsjs5

--- a/staff/jorge-rodri/array-functions/index.html
+++ b/staff/jorge-rodri/array-functions/index.html
@@ -7,7 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="demo/d-flat.js"></script>
+    <script src="test/test-a-rude.js"></script>
+    <script src="demo/d-copy-whit-in.js"></script>
+    <script src="test/test-copyWhitin.js"></script>
+    <!-- <script src="demo/d-filter.js"></script>
+    <script src="test/test-filter.js"></script> -->
 <!--     <script src="test/test-flat.js"></script>
  -->    <!-- <script src="demo/d-fill.js"></script>
     <script src="test/test-fill.js"></script> -->
