--- a/staff/jose-ortuno/array-functions/index.html
+++ b/staff/jose-ortuno/array-functions/index.html
@@ -7,17 +7,41 @@
     <title>Array Functions</title>
 </head>
 <body>
-    <script src="check.js"></script>
-    <!-- <script src="concat.js"></script>
-    <script src="concat.test.js"></script> -->
+    <!-- Test v1 -->
+
+    <!-- <script src="check.js"></script> -->
+    <!-- Test v2 -->
+    <script src="test-a-rude.js"></script>
+
+
+    <!-- Exersices -->
+
+    <script src="concat.js"></script>
     <!-- <script src="concat.demo.js"></script> -->
-    <!-- <script src="copyWithin.js"></script>
-    <script src="copyWithin.test.js"></script> -->
+    <script src="concat.test.js"></script>
+
+    <script src="copyWithin.js"></script>
     <!-- <script src="copyWithin.demo.js"></script> -->
-    <!-- <script src="entries.js"></script>
-    <script src="entries.test.js"></script> -->
+    <script src="copyWithin.test.js"></script>
+
+    <script src="find.js"></script>
+    <!-- <script src="find.demo.js"></script> -->
+    <script src="find.test.js"></script>
+
+    <!-- E6 -->
+
+    <!-- <script src="entries.js"></script> -->
     <!-- <script src="entries.demo.js"></script> -->
-    <script src="flat.js"></script>
-    <script src="flat.test.js"></script>
+
+
+    <!-- Ejemplos de Manu -->
+
+    <!-- <script src="forEach.js"></script> -->
+    <!-- <script src="forEach.demo.js"></script> -->
+    <!-- <script src="forEach.test.js"></script> -->
+
+    <!-- <script src="flat.js"></script> -->
+    <!-- <script src="flat.demo.js"></script> -->
+    <!-- <script src="flat.test.js"></script> -->
 </body>
 </html>
