modify src for nav icons

--- a/staff/jaume-villarreal/mucho-layout/mobile-first/index.html
+++ b/staff/jaume-villarreal/mucho-layout/mobile-first/index.html
@@ -47,20 +47,20 @@
                 </ul>
             </nav>
             <nav class="top-navigation__min-nav">
-                <img class ="min-nav__icon" src="../img/icon/collapsed-menu.svg" alt="Menu">
+                <img class ="min-nav__icon" src="../img/icons/collapsed-menu.svg" alt="Menu">
             </nav>
         </div>
         <nav class="secondary-nav">
             <div class="secondary-nav__row">
                 <p class="row__title">All Services</p>
                 <div class="row__icon">
-                    <img src="../img/icon/angle_down.svg" alt="Menu">
+                    <img src="../img/icons/angle_down.svg" alt="Menu">
                 </div>
             </div>
             <div class="secondary-nav__row">
                 <p class="row__title">All Industries</p>
                 <div class="row__icon">
-                    <img  src="../img/icon/angle_down.svg" alt="Menu">
+                    <img  src="../img/icons/angle_down.svg" alt="Menu">
                 </div>
             </div>
         </nav>
