--- a/staff/anna-nolla/blog-layout/index.html
+++ b/staff/anna-nolla/blog-layout/index.html
@@ -35,18 +35,14 @@
         <section>
            <h1>How to Find And Use Long Tail Keywords to Drive More Search Traffic Even If You’re A Beginner</h1>
            <p> Hands down, search traffic is the best traffic source anyone can use to build a profitable blog that makes money. But there’s one issue with getting more traffic from search engines: it usually takes a lot of time (especially if you’ve a new website). Here’s where long tail SEO comes into play. Long tail keywords send you the most qualified visitors from search engines like Google and they are really easier to rank for no matter what industry you are in.</p>
-            <br>
-        </section>
+       </section>
        <section>
             <h1>How to Increase Google Search Click-Through Rate for Greater Blog Traffic</h1>
-            <p>Bloggers are trained to create optimized content that will rank them on Google organic search. In particular, they need to rank on any of the top three positions for their target keyword. In the cut-throat world of organic search, you’d be hard-pressed to find ways on ranking at the top for your target keyword. But instead of clawing and scratching your way along with hundreds and thousands of your competitors, it’s best to focus on improving your CTR instead!</p>
-            <br>
-        </section>
+            <p>Bloggers are trained to create optimized content that will rank them on Google organic search. In particular, they need to rank on any of the top three positions for their target keyword. In the cut-throat world of organic search, you’d be hard-pressed to find ways on ranking at the top for your target keyword. But instead of clawing and scratching your way along with hundreds and thousands of your competitors, it’s best to focus on improving your CTR instead!</p>        </section>
        <section>
             <h1>Low Engagement Rate on Social Media? Here are 5 Possible Reasons Why</h1>
             <p>Social media marketers are often confused about what the term “Engagement rate” means. Engagement rate refers to the number of people engaging with your content on social media measured against the number of people who could be engaging with your content. Here’s the irony; engagement rates on different social networks may vary. For example, your Facebook and LinkedIn engagement rates may be polar opposites, but your engagement rate on social media on the whole may be low.
                 Many social media marketers struggle with keeping their engagement rate on social media high. By addressing the issues listed in this post, you can get a headstart on growing your social media engagement.</p>
-            <br>
         </section>
    </main>
 
