modify index.html <h1>

--- a/staff/jaume-villarreal/array-functions/1/index.html
+++ b/staff/jaume-villarreal/array-functions/1/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1><span>💪</span> TEST-A-RUDE 💪</h1>
+    <h1><span>🤛</span> TEST-A-RUDE 🤜</h1>
     <h2>A DIY testing app</h2>
     <script src="js/test-a-rude.js"></script>
     
