--- a/staff/lluis-agusti/array-functions/index.html
+++ b/staff/lluis-agusti/array-functions/index.html
@@ -7,9 +7,14 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="check.js" ></script>
-    <script src="flat.js"></script>
-    <script src="flat.test.js"></script>
+    <script src="test-a-rude.js" ></script>
+    <!-- <script src="flat.js"></script>
+    <script src="flat.test.js"></script> -->
+
+    <!-- <script src="arraywithin.js"></script>
+    <script src="arraywithin.test.js"></script> -->
+    <script src="includes.js"></script>
+    <script src="includes.test.js"></script>
 
 </body>
 </html>
