--- a/staff/oihane-unciti/array-functions/main.html
+++ b/staff/oihane-unciti/array-functions/main.html
@@ -7,8 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-        <script src="flat.js"></script>
-        <script src="flat.test.js"></script>
+    <script src="test-a-rude.js"></script>
+        <script src="arrayWithin.js"></script>
+        <script src="arrayWithin.test.js"></script>
 
     
 
