change ES6 variable declaration to ES5 and add more array-functions

--- a/staff/carolina-zhou/array-functions/index.html
+++ b/staff/carolina-zhou/array-functions/index.html
@@ -56,9 +56,9 @@
     <!-- <script src="from.demo.js"></script> -->
     <!-- <script src="from.test.js"></script> -->
 
-    <!-- <script src="includes.js"></script> -->
+    <script src="includes.js"></script>
     <!-- <script src="includes.demo.js"></script> -->
-    <!-- <script src="includes.test.js"></script> -->
+    <script src="includes.test.js"></script>
 
     <!-- <script src="index-of.js"></script> -->
     <!-- <script src="index-of.demo.js"></script> -->
@@ -87,9 +87,9 @@
     <!-- <script src="push.demo.js"></script> -->
     <!-- <script src="push.test.js"></script> -->
 
-    <!-- <script src="pop.js"></script> -->
+    <script src="pop.js"></script>
     <!-- <script src="pop.demo.js"></script> -->
-    <!-- <script src="pop.test.js"></script> -->
+    <script src="pop.test.js"></script>
 
     <!-- <script src="reduce.js"></script> -->
     <!-- <script src="reduce.demo.js"></script> -->
