--- a/staff/albert-fuente/array-functions/index.html
+++ b/staff/albert-fuente/array-functions/index.html
@@ -7,10 +7,57 @@
   <body>
     <h1>Callenge, reproducir todos los metodos </h1>
 
-    <script src="check.js"></script>
+    <script src="test-a-rude.js"></script>
+
+    <script src="for-each.js" charset="utf-8"></script>
+    <script src="for-each.demo.js" charset="utf-8"></script>
+
+    <script src="flat.js" charset="utf-8"></script>
+    <script src="flat.demo.js" charset="utf-8"></script>
+
+    <script src="map.js" charset="utf-8"></script>
+    <script src="map.demo.js" charset="utf-8"></script>
+
+    <script src="concat.js" charset="utf-8"></script>
+    <script src="concat.demo.js" charset="utf-8"></script>
+
+    <script src="join.js" charset="utf-8"></script>
+    <script src="join.demo.js" charset="utf-8"></script>
+
+    <script src="copy-within.js" charset="utf-8"></script>
+    <script src="copy-within.demo.js" charset="utf-8"></script>
+
+    <script src="entries.js" charset="utf-8"></script>
+    <script src="entries.demo.js" charset="utf-8"></script>
+
+    <script src="filter.js" charset="utf-8"></script>
+    <script src="filter.demo.js" charset="utf-8"></script>
+
+    <script src="un-shift.js" charset="utf-8"></script>
+    <script src="un-shift.demo.js" charset="utf-8"></script>
+
+    <script src="to-string.js" charset="utf-8"></script>
+    <script src="to-string.demo.js" charset="utf-8"></script>
+
+    <script src="fill.js" charset="utf-8"></script>
+    <script src="fill.demo.js" charset="utf-8"></script>
+
+    <script src="flatMap.js" charset="utf-8"></script>
+    <script src="flatMap.demo.js" charset="utf-8"></script>
+
+    <script src="array-from.js" charset="utf-8"></script>
+    <script src="array-from.demo.js" charset="utf-8"></script>
+    <script src="array-from-test.js" charset="utf-8"></script>
+
+    <script src="keys.js" charset="utf-8"></script>
+    <script src="keys.demo.js" charset="utf-8"></script>
+
+    
+
+    
 
 
-
+<!-- 
     <script src="push.js" charset="utf-8"></script>
     <script src="push.demo.js" charset="utf-8"></script>
     <script src="push.test.js" charset="utf-8"></script>
@@ -58,8 +105,7 @@
     <script src="find-index.js" charset="utf-8"></script>
     <script src="find-index.demo.js" charset="utf-8"></script>
 
-    <script src="flat.js" charset="utf-8"></script>
-    <script src="flat.demo.js" charset="utf-8"></script>
+
 
     <script src="flatMap.js" charset="utf-8"></script>
     <script src="flatMap.demo.js" charset="utf-8"></script>
@@ -68,7 +114,7 @@
     <script src="reduce.demo.js" charset="utf-8"></script>
 
     <script src="map.js" charset="utf-8"></script>
-    <script src="map.demo.js" charset="utf-8"></script>
+    <script src="map.demo.js" charset="utf-8"></script> -->
 
 <!--     <script src="last-index-of.js" charset="utf-8"></script>
     <script src="last-index-of.demo.js" charset="utf-8"></script>
