--- a/staff/jose-ortuno/curray/index.html
+++ b/staff/jose-ortuno/curray/index.html
@@ -4,44 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Array Functions</title>
+    <title>Curray</title>
 </head>
 <body>
-    <!-- Test v1 -->
+    <script src="testa-rude.js"></script>
 
-    <!-- <script src="check.js"></script> -->
-    <!-- Test v2 -->
-    <script src="test-a-rude.js"></script>
-
-
-    <!-- Exersices -->
-
-    <script src="concat.js"></script>
-    <!-- <script src="concat.demo.js"></script> -->
-    <script src="concat.test.js"></script>
-
-    <script src="copyWithin.js"></script>
-    <!-- <script src="copyWithin.demo.js"></script> -->
-    <script src="copyWithin.test.js"></script>
-
-    <script src="find.js"></script>
-    <!-- <script src="find.demo.js"></script> -->
-    <script src="find.test.js"></script>
-
-    <!-- E6 -->
-
-    <!-- <script src="entries.js"></script> -->
-    <!-- <script src="entries.demo.js"></script> -->
-
-
-    <!-- Ejemplos de Manu -->
-
-    <!-- <script src="forEach.js"></script> -->
-    <!-- <script src="forEach.demo.js"></script> -->
-    <!-- <script src="forEach.test.js"></script> -->
-
-    <!-- <script src="flat.js"></script> -->
-    <!-- <script src="flat.demo.js"></script> -->
-    <!-- <script src="flat.test.js"></script> -->
+    <script src="curray.js"></script>
+    <script src="curray.test.js"></script>
 </body>
 </html>
