--- a/staff/manuel-barzi/curray/0/index.html
+++ b/staff/manuel-barzi/curray/0/index.html
@@ -7,7 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="testa-ruda.js"></script>
+    <!-- <script src="testa-ruda-5.0.0.js"></script> -->
+    <script src="testa-ruda-6.0.0.js"></script>
     <script src="curray.js"></script>
     <script src="curray.test.js"></script>
 </body>
