add Curray.from to curray.js and curray.spec.js

--- a/staff/jaume-villarreal/curray/index.html
+++ b/staff/jaume-villarreal/curray/index.html
@@ -7,8 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="testa-ruda.js"></script>
+    <!-- <script src="testa-ruda.js"></script> -->
     <script src="curray.js"></script>
-    <script src="curray.test.js"></script>
+    <script src="curray.spec.js"></script>
 </body>
 </html>
