--- a/staff/anna-nolla/curray/index.html
+++ b/staff/anna-nolla/curray/index.html
@@ -7,8 +7,14 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="testa-ruda.js"></script>
+   <!-- <link rel="stylesheet" href="vendor/jasmine/jasmine-3.4.0/jasmine.css">
+
+    <script src="vendor/jasmine/jasmine-3.4.0/jasmine.js"></script>
+    <script src="vendor/jasmine/jasmine-3.4.0/jasmine-html.js"></script>
+    <script src="vendor/jasmine/jasmine-3.4.0/boot.js"></script> -->
+
+    <!-- include source files here... -->
     <script src="curray.js"></script>
-    <script src="curray.test.js"></script>
+   <!-- <script src="curray.test.js"></script> -->
 </body>
 </html>
