--- a/staff/anna-nolla/array-functions/index.html
+++ b/staff/anna-nolla/array-functions/index.html
@@ -20,6 +20,15 @@
     <script src="every.test.js"></script>
     <script src="join.funct.js"></script>
     <script src="join.test.js"></script>
+    <script src="includes.funt.js"></script>
+    <script src="filter.funt.js"></script>
+    <script src="map.funct.js"></script>
+    <script src="reduce.funct.js"></script>
+    <script src="some.funct.js"></script>
+    
+
+
+
 
     <!-- <script src="foreach.funct.js"></script>
     <script src="foreach.test.js"></script> -->
