--- a/staff/nestor-llorens/array-functions/index.html
+++ b/staff/nestor-llorens/array-functions/index.html
@@ -24,9 +24,12 @@
     <script src="array-from.test.js"></script>
     <script src="array-of.js"></script>
     <script src="array-of.test.js"></script>
-
-
-
+    <script src="join.js"></script>
+    <script src="join.test.js"></script>
+    <script src="isArray.js"></script>
+    <script src="isArray.test.js"></script>
+    <script src="unshift.js"></script>
+    <script src="unshift.test.js"></script>
 
 </body>
 </html>
