--- a/staff/ara-manjon/array-functions/index.html
+++ b/staff/ara-manjon/array-functions/index.html
@@ -7,24 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="test-a-rude.js"></script>
-
-    <!-- <script src="push.js"></script> -->
-    <!-- <script src="push.demo.js"></script> -->
-    <!-- <script src="push.test.js"></script> -->
-
-    <!-- <script src="pop.js"></script> -->
-    <!-- <script src="pop.demo.js"></script> -->
-
-    <script src="for-each.js"></script>
-    <!-- <script src="for-each.demo.js"></script> -->
-    <script src="for-each.test.js"></script>
-
-    <script src="map.js"></script>
-    <!-- <script src="map.demo.js"></script> -->
-    <script src="map.test.js"></script>
-
-    <script src="flat.js"></script>
-    <script src="flat.test.js"></script>
+    <!-- <script src="testa-ruda-5.0.0.js"></script> -->
+    <script src="testa-ruda-6.0.0.js"></script>
+    <script src="curray.js"></script>
+    <script src="curray.test.js"></script>
 </body>
 </html>
