layout tab correct

--- a/staff/jorge-rodri/mucho-layout/mob.html
+++ b/staff/jorge-rodri/mucho-layout/mob.html
@@ -34,17 +34,17 @@
         </nav>
     </header>
     <main class="info--margin">
-        <picture class="info__grid">
+        <picture class="info__display">
             <img class="info__fotos" src="http://placeimg.com/367/261/arch?t=1562891907625" alt="">
-            <img class="info__fotos fotos-grid info__foto-2" src="http://placeimg.com/367/261/arch?t=1562891953488" alt="">
+            <img class="info__fotos" src="http://placeimg.com/367/261/arch?t=1562891999211" alt="">
             <img class="info__fotos" src="http://placeimg.com/367/261/arch?t=1562891969230" alt="">
             <img class="info__fotos" src="http://placeimg.com/367/261/arch?t=1562891983696" alt="">
             <img class="info__fotos" src="http://placeimg.com/367/261/arch?t=1562891983696" alt="">
             <img class="info__fotos" src="http://placeimg.com/367/261/arch?t=1562891999211" alt="">
-            <img class="info__fotos fotos-grid1 info__foto-2" src="https://placeimg.com/367/261/people?t=1563135556009" alt="">
+            <img class="info__fotos" src="https://placeimg.com/367/261/people?t=1563135556009" alt="">
             <img class="info__fotos" src="https://placeimg.com/367/261/people?t=1563135586631" alt="">
             <img class="info__fotos" src="https://placeimg.com/367/261/people?t=1563135613362" alt="">
-            <img class="info__fotos fotos-grid2 info__foto-2" src="https://placeimg.com/367/261/people?t=1563135649496" alt="">
+            <img class="info__fotos" src="https://placeimg.com/367/261/people?t=1563135649496" alt="">
             <img class="info__fotos" src="https://placeimg.com/367/261/people?t=1563135666271" alt="">
         </picture>
         <section class="info--display">
