--- a/staff/nestor-llorens/initial-app/index.html
+++ b/staff/nestor-llorens/initial-app/index.html
@@ -5,56 +5,60 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Initial App</title>
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<style>
-    .panel--show {display: block;}
-    .panel--hide {display: none;}
-</style>
 
 <body>
-    <h1>Initial App</h1>
-    <section class='initial-panel panel panel--show' id='landing'>
-        <p><a href="" onclick="show('register')">Register </a>or<a href="" onclick=''> Login</a></p>
-    </section>
-    <section class='panel panel--hide' id='register'>
-        <form>
-            <label for="name">Name: </label> <input type="text" id="name">
-            <br>
-            <br>
-            <label for="surname">Surname: </label><input type="text" id="surname">
-            <br>
-            <br>
-            <label for="email">Email: </label><input type="email" id="email">
-            <br>
-            <br>
-            <label for="password">Password: </label> <input type="password" id="password">
-            <br>
-            <br>
-            <button type="submit" onclick="">Register</button>
-        </form>
-    </section>
-    <section class='panel panel--hide' id='regsuccess'>
-        <p>Register success...<br><br>
-            Procced to <a href='' onclick=''>login </a></p>
-    </section>
-    <section>
-        <form class='panel panel--hide' id='login'>
-            <label for="email">Email: </label><input type="text" name="email">
-            <br>
-            <br>
-            <label for="password">Password: </label><input type="text" name="password">
-            <br>
-            <br>
-            <button type="submit" >Login</button>
-        </form>
+    <main>
+        <h1>Initial App</h1>
 
-    </section>
-    <section class='panel panel--hide' id='loginsuccess'>
-        <p>Welcome!</p>
-    </section>
-    </div>
-    <script src='main.js'></script>
+        <!-- initial panel -->
+        <section class="panel panel--show">
+            <a href="">Register</a> or <a href="">Login</a>.
+        </section>
+
+        <!-- register panel -->
+        <section class="panel panel--hide">
+            <form>
+                <label for="name">Name</label>
+                <input type="text" id="name">
+                <label for="surname">Surname</label>
+                <input type="text" id="surname">
+                <label for="email">E-mail</label>
+                <input type="email" id="email">
+                <label for="password">Password</label>
+                <input type="password" id="password">
+                <button type="submit">Register</button>
+            </form>
+            <a href="">back</a>
+        </section>
+
+        <!-- register success panel -->
+        <section class="panel panel--hide">
+            Ok, registered succeeded, you can now proceed to <a href="">login</a>.
+        </section>
+
+        <!-- login panel -->
+        <section class="panel panel--hide">
+            <form>
+                <label for="email">E-mail</label>
+                <input type="email" id="email">
+                <label for="password">Password</label>
+                <input type="password" id="password">
+                <button type="submit">Login</button>
+            </form>
+            <a href="">back</a>
+        </section>
+
+        <!-- welcome panel -->
+        <section class="panel panel--hide">
+            <h2>Welcome</h2>
+            <h2 id='user'></h2>
+        </section>
+    </main>
+
+    <script src="main.js"></script>
 </body>
 
 </html>
