--- a/staff/oihane-unciti/initial-app/index.html
+++ b/staff/oihane-unciti/initial-app/index.html
@@ -42,9 +42,9 @@
         <section class="panel panel--hide">
             <form>
                 <label for="email">E-mail</label>
-                <input type="email" id="email">
+                <input type="email" id="email2">
                 <label for="password">Password</label>
-                <input type="password" id="password">
+                <input type="password" id="password2">
                 <button type="submit">Login</button>
             </form>
         </section>
