--- a/staff/adria-arquimbau/initial-app/index.html
+++ b/staff/adria-arquimbau/initial-app/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <main>
-        <h1>Initial App</h1>
+        <h1>Initial <span>App</span></h1>
 
         <!-- initial panel [0]-->
         <section class="panel panel--show">
@@ -21,15 +21,25 @@
         <!-- register panel [1]-->
         <section class="panel panel--hide">
             <form>
+                <div>
                 <label for="name">Name</label>
                 <input type="text" id="name">
+            </div>
+                <div>
                 <label for="surname">Surname</label>
                 <input type="text" id="surname">
+            </div>
+                <div>
                 <label for="email">E-mail</label>
                 <input type="email" id="email">
+            </div>
+                <div>
                 <label for="password">Password</label>
                 <input type="password" id="password">
+            </div>
+                <div>
                 <button type="submit">Register</button>
+                </div>
             </form>
             <a href="">back</a>
         </section>
