--- a/staff/adria-arquimbau/initial-app/index.html
+++ b/staff/adria-arquimbau/initial-app/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <main>
-        <h1>Initial <span>App</span></h1>
+        <div class=""><h1>Initial App</h1></div>
 
         <!-- initial panel [0]-->
         <section class="panel panel--show">
