changed BEM styles

--- a/staff/albert-fuente/mucho-layout/mucho-sass/index.html
+++ b/staff/albert-fuente/mucho-layout/mucho-sass/index.html
@@ -13,14 +13,14 @@
 <body>
     <header>
         <div class="barra">
-            <div ><h1 class="b mucho">Mucho</h1></div>
+            <div ><h1 class="b barra__logo">Mucho</h1></div>
             <div class="mobile">
                 <p>All Services</p>
                 <p>All Industries</p>
             </div>
-            <p class="b desktop">We are a strategy, branding, packaging, and graphic studio. We create design with meaning from our locations in Barcelona, Paris, San Francisco, New York and SydnWe’d love to hear from you at <a href="#">info@wearemucho.com</a> </p>
-            <div class="b desktop" id="links">
-                <ul class="navlinks">
+            <p class="b barra--desktop">We are a strategy, branding, packaging, and graphic studio. We create design with meaning from our locations in Barcelona, Paris, San Francisco, New York and SydnWe’d love to hear from you at <a href="#">info@wearemucho.com</a> </p>
+            <div class="b barra--desktop" id="links">
+                <ul class="barra__navlinks">
                     <li><a href="#">Work</a></li>
                     <li><a href="#">Strategy</a></li>
                     <li><a href="#">Sharing</a></li>
