--- a/staff/oihane-unciti/mucho-layout/all-sass/main.html
+++ b/staff/oihane-unciti/mucho-layout/all-sass/main.html
@@ -38,7 +38,6 @@
     </nav>
 
     <main class="mosaic">
-        
         <img class="img img__big1" src="https://placeimg.com/640/480/nature" alt="">
         <img class="img" src="https://placeimg.com/640/480/arch" alt="">
         <img class="img img__big3" src="https://placeimg.com/640/480/nature" alt="">
@@ -51,9 +50,9 @@
         <img class="img" src="https://placeimg.com/640/480/arch" alt="">
 
         <article class="article__information">  
-            <a href=""></a>
-            <p>What does brand strategy mean to you? How do powerful ideas become into powerful meaning?
-            See our approach here:… </p>   
+        <a href=""></a>
+        <p>What does brand strategy mean to you? How do powerful ideas become into powerful meaning?
+        See our approach here:… </p>   
         </article>
 
         <article class="article__information" >
@@ -114,7 +113,7 @@
         <section class="social_networks">
                 <div class="social_networks__bloc">
                     <p class="social_networks__suscribe">Suscribete</p>
-                    <ul class="menu">
+                    <ul class="menu menu__social">
                         <li class="menu__red">Twiter</li>
                         <li class="menu__red">Linkedin</li>
                         <li class="menu__red">Facebook</li>
