update con funcioens agrupadas y mas legible todo

--- a/staff/adria-arquimbau/initial-app/index.html
+++ b/staff/adria-arquimbau/initial-app/index.html
@@ -35,7 +35,7 @@
             </div>
                 <div>
                 <label for="password">Password</label>
-                <input type="password" id="password">
+                <input type="password" id="password" required minlength="4">
             </div>
                 <div>
                 <button type="submit">Register</button>
