update curray, update initial-app

--- a/staff/manuel-barzi/initial-app/index.html
+++ b/staff/manuel-barzi/initial-app/index.html
@@ -48,6 +48,7 @@
                 <input type="password" id="password">
                 <button type="submit">Login</button>
             </form>
+            <a href="">back</a>
         </section>
 
         <!-- welcome panel -->
@@ -56,6 +57,7 @@
         </section>
     </main>
 
+    <script src="curray.js"></script>
     <script src="main.js"></script>
 </body>
 
