save updated css rules && implement user login logic

--- a/staff/jaume-villarreal/initial-app/index.html
+++ b/staff/jaume-villarreal/initial-app/index.html
@@ -32,7 +32,7 @@
                         <button type="submit" class="btn btn--form">Register</button>
                     </div>
                 </form>
-                <a class="btn btn--back" href="">back</a>
+                <a class="btn btn--back" href="">Back</a>
             </section>
             
             <section class="panel panel--hide successRegister">
@@ -52,7 +52,7 @@
                         <button type="submit" class="btn btn--form">Login</button>
                     </div>
                 </form>
-                <a class="btn btn--back" href="">back</a>
+                <a class="btn btn--back" href="">Back</a>
             </section>
             
             <section class="panel panel--hide landing">
