--- a/staff/ara-manjon/initial-app/index.html
+++ b/staff/ara-manjon/initial-app/index.html
@@ -30,17 +30,17 @@
         <section class="panel panel--hide">
             <form>
                 <label for="name">Name</label>
-                <input type="text"  id="name" required minlength="3" maxlength="15">
+                <input type="text"  id="name" required placeholder="name">
                 <label for="surname">Surname</label>
-                <input type="text"  id="surname">
+                <input type="text"  id="surname" required placeholder="surname">
                 <label for="email">Email</label>
-                <input type="email" id="email">
+                <input type="email" id="email" required placeholder="email" >
                 <label for="password">Password</label>
-                <input type="password" id="password" required minlength="6" maxlength="15">
+                <input type="password" id="password"  required minlength="4" maxlength="8" placeholder="password">
                 <button type="submit">Register</button>
 
             </form>
-            <a href="">Register</a>
+            <a href="">Login</a>
         </section>
 
         <!--Register Success[2]-->
@@ -52,9 +52,10 @@
         <section class="panel panel--hide">
             <form>
                 <label for="email">Email</label>
-                <input type="email" id="email">
+                <input type="email" id="email" placeholder="email" required>
                 <label for="password">Password</label>
-                <input type="password" id="password" required minlength="8" maxlength="15">
+                <input type="password" id="password" required minlength="4" maxlength="8" placeholder="password" required>
+                <p class='errorText'></p>
                 <button type="submit">Login</button>
             </form>
             <a href="">Register</a>
@@ -62,11 +63,11 @@
         
         <!--Login Panel[4]-->
         <secction class="panel panel--hide">
-            <h2>Welcome</h2>
+            <h2 class="welcome"></h2>
         </secction>
 
     </main>
-    <script src="main2.js"></script>
+    <script src="main.js"></script>
 
 </body>
 
