--- a/staff/oihane-unciti/initial-app/index.html
+++ b/staff/oihane-unciti/initial-app/index.html
@@ -47,15 +47,18 @@
                 <input type="password" id="password2">
                 <button type="submit">Login</button>
             </form>
+            <a href="">back</a>
         </section>
 
         <!-- welcome panel -->
         <section class="panel panel--hide">
             <h2>Welcome!</h2>
+            <a href="">back</a>
         </section>
     </main>
 
     <script src="main.js"></script>
+
 </body>
 
 </html>
