add warning to initial-app and clean folder

--- a/staff/christian-haag/initial-app/index.html
+++ b/staff/christian-haag/initial-app/index.html
@@ -47,13 +47,19 @@
                 <label for="password">Password*</label>
                 <input type="password" id="password" required>
                 <button type="submit">Login</button>
+                <p class="alert"></p>
             </form>
+
         </section>
 
         <!-- welcome panel -->
         <section class="panel panel--hide">
             <h2>Welcome!</h2>
+            <p class="name"></p>
             <img src="https://media.giphy.com/media/JQ3IMbDi5Jkw8/giphy.gif" alt="dancing dog">
+            <div class="anch">
+                <a href="">back</a>
+            </div>
         </section>
     </main>
 
