Don't know what has changed, had to checkout

--- a/staff/christian-haag/initial-app/index.html
+++ b/staff/christian-haag/initial-app/index.html
@@ -62,7 +62,7 @@
             </div>
         </section>
     </main>
-
+    <script src="curray.js"></script>
     <script src="main.js"></script>
 </body>
 
